<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.adityawebapps.adityabloodconnect.AboutFragment"
    android:background="#fff">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vision"
        android:padding="5dp"
        android:background="#757575"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visiontext"
            android:textSize="24sp"
            android:textColor="#000"

            />

    </ScrollView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:padding="5dp"
        android:background="#757575"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/dby"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="Harsha Vardhan - UI/UX Developer \nMukesh Kalaga - Backend Developer\nTechnoWebX Team"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:foreground="@drawable/rounded_fg"
            android:scaleType="centerInside"
            android:src="@drawable/web" android:contentDescription="@string/todo" />

    </LinearLayout>


</LinearLayout>
